Resolves #12: create an API to restore user by id
